Fix bugs in hessian-free Newton with sparse matrices

--- a/task2_experiments.ipynb
+++ b/task2_experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -30,6 +30,15 @@
      "output_type": "stream",
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/aksholokhov/.anaconda/lib/python3.6/site-packages/IPython/core/magics/pylab.py:161: UserWarning: pylab import has clobbered these variables: ['norm']\n",
+      "`%matplotlib` prevents importing * from pylab and numpy\n",
+      "  \"\\n`%matplotlib` prevents importing * from pylab and numpy\"\n"
      ]
     }
    ],
@@ -44,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -290,30 +299,381 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'LogRegL2Oracle' object has no attribute 'hess_vec'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-cced69c913f8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mx0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA_w8a\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mg0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlogreg_w8a\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgrad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mx_w8a_n\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmessage_w8a_n\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhistory_w8a_n\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhessian_free_newton\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlogreg_w8a\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Users/aksholokhov/Google Диск/Documents/MIPT/ИАД ВЦ/МОМО/mipt-momo17/task2/optimization.py\u001b[0m in \u001b[0;36mhessian_free_newton\u001b[0;34m(oracle, x_0, tolerance, max_iter, line_search_options, display, trace)\u001b[0m\n\u001b[1;32m    302\u001b[0m             \u001b[0mn_k\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg_k\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    303\u001b[0m             d_k, message, _ = conjugate_gradients(lambda v: oracle.hess_vec(x_k, v.T), -g_k, -g_k,\n\u001b[0;32m--> 304\u001b[0;31m                                                   tolerance = n_k)\n\u001b[0m\u001b[1;32m    305\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mmessage\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m\"success\"\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mg_k\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md_k\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    306\u001b[0m                 \u001b[0mn_k\u001b[0m \u001b[0;34m/=\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/aksholokhov/Google Диск/Documents/MIPT/ИАД ВЦ/МОМО/mipt-momo17/task2/optimization.py\u001b[0m in \u001b[0;36mconjugate_gradients\u001b[0;34m(matvec, b, x_0, tolerance, max_iter, trace, display)\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m     \u001b[0;31m#print(type(matvec(x_0)))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 65\u001b[0;31m     \u001b[0mg_k\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmatvec\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_0\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     66\u001b[0m     \u001b[0md_k\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0mg_k\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/aksholokhov/Google Диск/Documents/MIPT/ИАД ВЦ/МОМО/mipt-momo17/task2/optimization.py\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(v)\u001b[0m\n\u001b[1;32m    301\u001b[0m         \u001b[0;32mwhile\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0msolution_found\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    302\u001b[0m             \u001b[0mn_k\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg_k\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 303\u001b[0;31m             d_k, message, _ = conjugate_gradients(lambda v: oracle.hess_vec(x_k, v.T), -g_k, -g_k,\n\u001b[0m\u001b[1;32m    304\u001b[0m                                                   tolerance = n_k)\n\u001b[1;32m    305\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mmessage\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m\"success\"\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mg_k\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md_k\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'LogRegL2Oracle' object has no attribute 'hess_vec'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "A_w8a, b_w8a = load_svmlight_file(\"datasets/w8a.txt\")\n",
     "logreg_w8a = create_log_reg_oracle(A_w8a, b_w8a, regcoef=1/A_w8a.shape[0])\n",
     "x0 = np.zeros(A_w8a.shape[1])\n",
-    "g0 = norm(logreg_w8a.grad(x0))\n",
+    "g0 = norm(logreg_w8a.grad(x0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 420 ms, sys: 57.8 ms, total: 477 ms\n",
+      "Wall time: 480 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
     "x_w8a_n, message_w8a_n, history_w8a_n = hessian_free_newton(logreg_w8a, x0, trace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.69 s, sys: 31.6 ms, total: 1.72 s\n",
+      "Wall time: 1.62 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "x_w8a_g, message_w8a_g, history_w8a_g = gradient_descent(logreg_w8a, x0, trace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 152 ms, sys: 2.52 ms, total: 155 ms\n",
+      "Wall time: 154 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "x_w8a_b, message_w8a_b, history_w8a_b = lbfgs(logreg_w8a, x0, trace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "A_gis, b_gis = load_svmlight_file(\"datasets/gisette_scale\")\n",
+    "logreg_gis = create_log_reg_oracle(A_gis, b_gis, regcoef=1/A_gis.shape[0])\n",
+    "x0 = np.zeros(A_gis.shape[1])\n",
+    "g0 = norm(logreg_gis.grad(x0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 27.6 s, sys: 7.19 s, total: 34.8 s\n",
+      "Wall time: 25.7 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "x_gis_n, message_gis_n, history_gis_n = hessian_free_newton(logreg_gis, x0, trace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 39min, sys: 1min 2s, total: 40min 2s\n",
+      "Wall time: 21min 1s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "x_gis_g, message_gis_g, history_gis_g = gradient_descent(logreg_gis, x0, trace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 23.8 s, sys: 818 ms, total: 24.6 s\n",
+      "Wall time: 14 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "x_gis_b, message_gis_b, history_gis_b = lbfgs(logreg_gis, x0, trace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "A_rs, b_rs = load_svmlight_file(\"datasets/real-sim\")\n",
+    "logreg_rs = create_log_reg_oracle(A_rs, b_rs, regcoef=1/A_rs.shape[0])\n",
+    "x0 = np.zeros(A_rs.shape[1])\n",
+    "g0 = norm(logreg_rs.grad(x0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3.82 s, sys: 326 ms, total: 4.15 s\n",
+      "Wall time: 2.13 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "x_rs_n, message_rs_n, history_rs_n = hessian_free_newton(logreg_rs, x0, trace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/aksholokhov/.anaconda/lib/python3.6/site-packages/scipy/optimize/linesearch.py:414: LineSearchWarning: The line search algorithm did not converge\n",
+      "  warn('The line search algorithm did not converge', LineSearchWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 59.2 s, sys: 1.33 s, total: 1min\n",
+      "Wall time: 31.6 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "x_rs_g, message_rs_g, history_rs_g = gradient_descent(logreg_rs, x0, trace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.56 s, sys: 38 ms, total: 1.59 s\n",
+      "Wall time: 831 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "x_rs_b, message_rs_b, history_rs_b = lbfgs(logreg_rs, x0, trace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "A_news, b_news = load_svmlight_file(\"datasets/news20.binary\")\n",
+    "logreg_news = create_log_reg_oracle(A_news, b_news, regcoef=1/A_news.shape[0])\n",
+    "x0 = np.zeros(A_news.shape[1])\n",
+    "g0 = norm(logreg_news.grad(x0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 14.3 s, sys: 1.98 s, total: 16.3 s\n",
+      "Wall time: 10.9 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "x_news_n, message_news_n, history_news_n = hessian_free_newton(logreg_news, x0, trace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/aksholokhov/.anaconda/lib/python3.6/site-packages/scipy/optimize/linesearch.py:414: LineSearchWarning: The line search algorithm did not converge\n",
+      "  warn('The line search algorithm did not converge', LineSearchWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 7min 19s, sys: 38.3 s, total: 7min 58s\n",
+      "Wall time: 4min 4s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "x_news_g, message_news_g, history_news_g = gradient_descent(logreg_news, x0, trace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 16.4 s, sys: 2.08 s, total: 18.5 s\n",
+      "Wall time: 9.34 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "x_news_b, message_news_b, history_news_b = lbfgs(logreg_news, x0, trace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "A_rcv, b_rcv = load_svmlight_file(\"datasets/rcv1_train.binary\")\n",
+    "logreg_rcv = create_log_reg_oracle(A_rcv, b_rcv, regcoef=1/A_rcv.shape[0])\n",
+    "x0 = np.zeros(A_rcv.shape[1])\n",
+    "g0 = norm(logreg_rcv.grad(x0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.87 s, sys: 158 ms, total: 2.02 s\n",
+      "Wall time: 1.06 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "x_rcv_n, message_rcv_n, history_rcv_n = hessian_free_newton(logreg_rcv, x0, trace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/aksholokhov/.anaconda/lib/python3.6/site-packages/scipy/optimize/linesearch.py:414: LineSearchWarning: The line search algorithm did not converge\n",
+      "  warn('The line search algorithm did not converge', LineSearchWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 14.2 s, sys: 310 ms, total: 14.5 s\n",
+      "Wall time: 8.6 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "x_rcv_g, message_rcv_g, history_rcv_g = gradient_descent(logreg_rcv, x0, trace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 968 ms, sys: 75.5 ms, total: 1.04 s\n",
+      "Wall time: 556 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "x_rcv_b, message_rcv_b, history_rcv_b = lbfgs(logreg_rcv, x0, trace=True)"
    ]
   }
  ],
