Finalize experiments for task 3

--- a/task2_experiments.ipynb
+++ b/task2_experiments.ipynb
@@ -300,7 +300,9 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "A_w8a, b_w8a = load_svmlight_file(\"datasets/w8a.txt\")\n",
